--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,11 @@ name: Release Creation
 
 on:
   release:
-    types: [ published ]
+    types: [published]
 
 env:
-  package_name: "Item Piles: D&D 5e"
-  package_id: itempilesdnd5e
+  package_name: "Item Piles: PF 1e"
+  package_id: item-piles-pf1e
 
 jobs:
   build:
@@ -17,11 +17,11 @@ jobs:
       # Substitute the Manifest and Download URLs in the module.json
       # for a FULL RELEASE
       - name: Substitute Manifest and Download Links For Versioned Ones
-        if: "!github.event.release.prerelease"
+        if: !github.event.release.prerelease
         id: sub_release_manifest_version
         uses: microsoft/variable-substitution@v1
         with:
-          files: 'module.json'
+          files: "module.json"
         env:
           version: ${{github.event.release.tag_name}}
           url: https://github.com/${{github.repository}}
@@ -32,11 +32,11 @@ jobs:
       # for a PRE RELEASE. Manifest pointing to live module.json on branch,
       # which is updated after tag.
       - name: Substitute Manifest and Download Links For Versioned Ones
-        if: "github.event.release.prerelease"
+        if: github.event.release.prerelease
         id: sub_prerelease_manifest_version
         uses: microsoft/variable-substitution@v1
         with:
-          files: 'module.json'
+          files: "module.json"
         env:
           version: ${{github.event.release.tag_name}}
           url: https://github.com/${{github.repository}}
@@ -48,7 +48,7 @@ jobs:
 
       # Create a release for this specific version
       - name: Update Release with Files
-        if: "!github.event.release.prerelease"
+        if: !github.event.release.prerelease
         id: create_version_release
         uses: ncipollo/release-action@v1
         with:
@@ -57,6 +57,6 @@ jobs:
           draft: false
           prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
-          artifacts: './module.json, ./module.zip'
+          artifacts: "./module.json, ./module.zip"
           tag: ${{ github.event.release.tag_name }}
           body: ${{ github.event.release.body }}
